# tplink-local-lightswitch

./: .gitignore  README.md  config.toml  pyproject.toml  run-tests.bash  setup.bash  startup.bash
services/: install.bash  tplink-manager.service  uninstall.bash
src/: TPlinkManager.py
tests/: conftest.py  test_bash.py  test_config.py  test_device_server.py
tests/bash/: bash_unit  test_install.sh
